--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,12 +5,5 @@ dependencies:
   - python=3.7
   - jupyterlab
   - pip
-#  - dask
-#  - dask-ml
-#  - nodejs
-#  - dask_labextension
-#  - pip:
-#    - pyspark
-#    - tensorflow
-#    - gym
+    - gym
     - ray[rllib]
