--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -12,9 +12,9 @@ dependencies:
   - dask_labextension=5.0.0
   - pip:
     - gym
-    - ray[default]=1.2.0
-    - ray[rllib]=1.2.0
-    - tensorflow=2.4.1
+    - ray[default]==1.2.0
+    - ray[rllib]==1.2.0
+    - tensorflow==2.4.1
     - pyspark
     - mlflow
 
