--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -11,8 +11,9 @@ dependencies:
   - dask-ml=1.8.0
   - dask_labextension=5.0.0
   - nodejs
+  - aioredis=1.3.1
   - pip:
-    - gym
+    - gym==0.18.0
     - ray[rllib]==1.2.0
     - tensorflow==2.4.1
     - pyspark
